# brosdk-sdk-rust

./: .gitignore  Cargo.toml  README.md  README_EN.md  package.json  tauri.conf.json
capabilities/: default.json
icons/: icon.icns
src-tauri/: commands.rs  main.rs
src-tauri/capabilities/: default.json
src/brosdk/: manager.rs
