[package]
name = "brosdk-sdk"
version = "0.1.0"
edition = "2021"
description = "Browser SDK Rust bindings"
authors = ["Brosdk Team"]
license = "MIT"
repository = "https://github.com/browsersdk/brosdk-sdk-rust#"

[lib]
name = "brosdk_sdk"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
libloading = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[features]
default = ["tauri-app"]
tauri-app = ["tauri", "tauri-build", "tauri-plugin-shell"]

[[bin]]
name = "brosdk-demo"
path = "src-tauri/main.rs"
